--- a/_sass/_skeleton.scss
+++ b/_sass/_skeleton.scss
@@ -112,14 +112,18 @@ html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
 }
 
 body {
-  width: 100%;
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   font-weight: 300;
-  color: #222; 
+  color: #222;
+}
+
+#page-content {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
